--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://blog.natalienguyen.dev/"
+baseURL = "https://stoic-noether-db59e8.netlify.com"
 languageCode = "en-us"
 title = "Natalie Nguyen 🍉"
 description = "I work in IT"
