--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://stoic-noether-db59e8.netlify.com"
+baseURL = "https://relaxed-ramanujan-1e6ef2.netlify.com."
 languageCode = "en-us"
 title = "Natalie Nguyen 🍉"
 description = "I work in IT"
