--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,55 @@
-baseURL = "https://blog.natalienguyen.dev"
-languageCode = "en-us"
-title = "Natalie Nguyen 🍉"
-description = "I work in IT"
+#baseURL = "https://blog.natalienguyen.dev"
+#languageCode = "en-us"
+#title = "Natalie Nguyen 🍉"
+#description = "I work in IT"
 
-theme=["monopriv","hugo-paper-amended", "hugo-paper"]
+#theme=["monopriv","hugo-paper-amended", "hugo-paper"]
 
 googleAnalytics = "UA-154580558-1"
+
+
+baseurl = "https://blog.natalienguyen.dev"
+languageCode = "en-us"
+theme = "hello-friend-ng"
+
+[params]
+  dateform        = "Jan 2, 2006"
+  dateformShort   = "Jan 2"
+  dateformNum     = "2006-01-02"
+  dateformNumTime = "2006-01-02 15:04 -0700"
+
+  # Set disableReadOtherPosts to true in order to hide the links to other posts.
+  disableReadOtherPosts = false
+
+  # Metadata mostly used in document's head
+  description = "Homepage and blog by Djordje Atlialp"
+  keywords = "homepage, blog, science, informatics, development, programming"
+  images = [""]
+
+  # Directory name of your blog content (default is `content/posts`)
+  contentTypeName = "posts"
+
+  # Default theme "light" or "dark"
+  defaultTheme = "dark"
+
+[languages]
+  [languages.en]
+    title = "natalie nguyen 🍉"
+    subtitle = "I work in IT"
+    keywords = ""
+    copyright = ""
+    readOtherPosts = "Read other posts"
+
+    [languages.en.params.logo]
+      logoText = "cd /home/natalie"
+      logoHomeLink = "/"
+    # or
+    #
+    # path = "/img/your-example-logo.svg"
+    # alt = "Your example logo alt text"
+
+  # And you can even create generic menu
+  [[menu.main]]
+    identifier = "blog"
+    name       = "Blog"
+    url        = "/posts"
